# 1c_launcher

./: .gitignore  README.md  app.spec  config.py  main.py  main_gui.py  main_tree_gui.py  pyproject.toml  requirements-dev.txt  requirements.txt  smoke_test.py
Export/: 5925cf8_2026-02-18.txt
Git/: Git.ps1
Git/modules/: Config.ps1  GitFunctions.ps1  MenuFunctions.ps1
dialogs/: __init__.py  database_settings_dialog.py  help_dialog.py
gui/: __init__.py  database_list_widget.py  main_tree_window.py  main_window.py  theme.py  tree_window.py
gui/actions/: Start-1C-Console.ps1  __init__.py  _db_designer_mixin.py  _db_launch_mixin.py  _db_recent_mixin.py  _db_server_console_mixin.py  database_actions.py  database_operations.py  process_actions.py
gui/dialogs/: __init__.py  database_settings_dialog.py  help_dialog.py
gui/hotkeys/: __init__.py  global_hotkey_manager.py
gui/mixins/: dbm_mixin.py  tray_mixin.py
gui/tree/: __init__.py  main_processes_tree_builder.py  opened_bases_tree_builder.py
models/: database.py
services/: base_launcher.py  base_reader.py  process_manager.py
src/: app.py  config.py
src/gui/: tree_window.py
src/gui/actions/: __init__.py  database_actions.py  database_operations.py
src/gui/dialogs/: database_settings_dialog.py  help_dialog.py
src/gui/hotkeys/: global_hotkey_manager.py
src/gui/mixins/: __init__.py  bases_data_mixin.py  db_designer_mixin.py  db_launch_mixin.py  digit_navigation_mixin.py  (+3 more)
src/models/: __init__.py  database.py
src/services/: __init__.py  base_launcher.py  base_reader.py  process_manager.py
(+4 files in other folders)
